# learn-pytorch

./: visualize_3d.py  .gitignore  Dockerfile  README.md  collect_python.sh  collect_python_files.sh  datasets.ipynb  datasets.py  docker-compose.yml  docker_logs.sh  h100.py  h100_copy.py  imdb.ipynb  llama_fine_tuning.py  mnist.py  mnist_pytorch_results.csv  output.txt  pull.sh  pycuda.py  pyproject.toml  python_files_contents.txt  requirements.txt  run.sh  s3.py  s3_download.py  s3_upload.py  scp.sh  script.py  test.ipynb  test.py  train_japanese.ipynb  train_japanese.py  up.sh
