[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = ["CheolheeLee0 <wks0968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
