[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = "A project using unsloth FastLanguageModel and SFTTrainer"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "unsloth_project"}]

[tool.poetry.dependencies]
python = "^3.9.18"
unsloth = "^0.4.1" # Replace with the actual version
torch = "==2.0.0"
trl = "==0.4.1"
transformers = "==4.27.4"
datasets = "==2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"